--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,9 @@
     <parent>
         <groupId>net.onebean</groupId>
         <artifactId>net.onebean.dependencies</artifactId>
-        <version>1.0.0.RELEASE</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <version>1.0.1.RELEASE</version>
 
     <artifactId>net.onebean.data.jsch</artifactId>
     <packaging>jar</packaging>
